--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,11 @@
             <artifactId>javafx-fxml</artifactId>
             <version>18-ea+6</version>
         </dependency>
-
+        <dependency>
+            <groupId>com.what3words</groupId>
+            <artifactId>w3w-java-wrapper</artifactId>
+            <version>3.1.8</version>
+        </dependency>
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-api</artifactId>
