--- a/pom.xml
+++ b/pom.xml
@@ -28,18 +28,12 @@
         <dependency>
             <groupId>com.what3words</groupId>
             <artifactId>w3w-java-wrapper</artifactId>
-            <version>3.1.8</version>
+            <version>3.1.2</version>
         </dependency>
         <dependency>
             <groupId>org.junit.jupiter</groupId>
-            <artifactId>junit-jupiter-api</artifactId>
-            <version>${junit.version}</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.junit.jupiter</groupId>
-            <artifactId>junit-jupiter-engine</artifactId>
-            <version>${junit.version}</version>
+            <artifactId>junit-jupiter</artifactId>
+            <version>5.9.0</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
@@ -64,7 +58,7 @@
                         <!-- Default configuration for running with: mvn clean javafx:run -->
                         <id>default-cli</id>
                         <configuration>
-                            <mainClass>pl.programming.threewords_fx/pl.programming.HelloApplication
+                            <mainClass>pl.programming.threewords_fx/main.java.pl.programming.HelloApplication
                             </mainClass>
                             <launcher>app</launcher>
                             <jlinkZipName>app</jlinkZipName>
